--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
     "react-signature-canvas": "^1.1.0-alpha.2",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.4",
     "zustand": "^5.0.6"
   },
