feat(push): enhance push notification handling for users and admins

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ schema.md
 .github/custom-instructions.md
 .gitignore
 .github/task-requirements-settings.md
+.github/task-requirements-serverside-email.md
