feat: Implement push notification system with user permission handling
- Added PushPermissionModal component for managing notification permissions.
- Created usePushNotifications hook to handle push notification logic.
- Integrated Firebase messaging setup in firebaseClient.js.
- Developed fcmService.js for sending notifications to users.
- Implemented notification templates for rental-related notifications.
- Added utility functions for testing FCM functionality in testFCM.js.
- Enhanced token lifecycle management in tokenLifecycle.js.
- Created Supabase Edge Function for sending FCM notifications.
- Added CORS support and error handling in the Edge Function.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.50.2",
     "@tailwindcss/vite": "^4.1.4",
     "downloadjs": "^1.4.7",
+    "firebase": "^12.1.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
     "pdf-lib": "^1.17.1",
