feat: add Admin Notification Settings component for managing push notifications and device activity

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ schema.md
 .github/task-requirements-settings.md
 .github/task-requirements-serverside-email.md
 .github/to-do.md
+admin_push_notification_triggers.sql
