--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^7.5.0",
     "react-signature-canvas": "^1.1.0-alpha.2",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.2.1",
     "tailwindcss": "^4.1.4",
     "zustand": "^5.0.6"
   },
