--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -343,3 +343,10 @@ entrypoint = "./functions/send-email/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/send-email/*.html" ]
+
+[functions.send-email-inquiry]
+enabled = true
+verify_jwt = false
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/send-email-inquiry/*.html" ]
