--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "downloadjs": "^1.4.7",
     "firebase": "^12.1.0",
     "framer-motion": "^12.23.12",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.540.0",
     "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.5.0",
     "react-signature-canvas": "^1.1.0-alpha.2",
     "react-toastify": "^11.0.5",
     "recharts": "^3.2.1",
     "tailwindcss": "^4.1.4",
+    "use-debounce": "^10.0.6",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
