--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.5.0",
     "react-signature-canvas": "^1.1.0-alpha.2",
+    "react-swipeable": "^7.0.2",
     "react-toastify": "^11.0.5",
     "recharts": "^3.2.1",
     "tailwindcss": "^4.1.4",
