--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -350,3 +350,7 @@ verify_jwt = false
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/send-email-inquiry/*.html" ]
+
+[functions.cleanup-orphaned-files]
+enabled = true
+verify_jwt = false
